--- a/css/style.css
+++ b/css/style.css
@@ -2384,9 +2384,9 @@ img{
 .banner-meetup .address{
 	position: relative;
 	display: block;
-	font-size: 20px;
+	font-size: 30px;
 	line-height: 26px;
-	color: #ffffff;
+	color: #dcdce2;
 	font-weight: 700;
 	text-align: center;
 	margin-bottom: 20px;
